--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Npm-producers/temp/issues"
   },
-  "homepage": "https://github.com/Npm-producers/temp#readme"
+  "homepage": "https://github.com/Npm-producers/temp#readme",
+  "devDependencies": {
+    "jest": "^29.2.1"
+  }
 }
