--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test2": "jest--compilers ts:ts-node/register 'src/**/*.test.ts'",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,8 @@
   },
   "homepage": "https://github.com/Npm-producers/temp#readme",
   "devDependencies": {
-    "jest": "^29.2.1"
+    "@types/jest": "^29.2.3",
+    "jest": "^29.2.1",
+    "typescript": "^4.9.3"
   }
 }
