--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "temp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
-    "test": "jest",
-    "test2": "jest--compilers ts:ts-node/register 'src/**/*.test.ts'",
-    "build": "tsc --build",
-    "clean": "tsc --build --clean"
+    "build": "npm run clean && tsc",
+    "clean": "rm -r ./dist",
+    "cover": "nyc npm run test",
+    "cover:check": "nyc --check-coverage npm run test",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint --ext .ts --fix src/**/*.ts test/**/*.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,8 +27,11 @@
   },
   "homepage": "https://github.com/Npm-producers/temp#readme",
   "devDependencies": {
-    "@types/jest": "^29.2.3",
-    "jest": "^29.2.1",
+    "@jest/globals": "^29.4.2",
+    "@types/jest": "^29.4.0",
+    "jest": "^29.4.2",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.3"
-  }
+  },
+  "type": "commonjs"
 }
