--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true
   },
   "include": ["lib/*"],
   "exclude": ["node_modules"]
