--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
 #        cache: 'npm'
 #    - run: npm ci
     - run: npm i
+    - run: npm run build
     - run: npm test
-    - run: npm build
